fixed deprecated method warning